--- a/css/moonstone-variables.less
+++ b/css/moonstone-variables.less
@@ -50,7 +50,7 @@
 @moon-non-latin-super-header-font-size: 32px;
 @moon-non-latin-body-font-size:         26px;
 @moon-non-latin-divider-font-size:      28px;
-@moon-non-latin-button-large-font-size: 30px;
+@moon-non-latin-button-large-font-size: 36px;
 @moon-non-latin-button-small-font-size: 27px;
 @moon-non-latin-header-font-size:       114px;
 
